src/include/structs.h

typedef uint8_t u8;
typedef uint32_t u32;
typedef uint64_t u64;
/* ========================================================================= *
 * Enum Types for Writing Policy                                             *
 * ========================================================================= */

// clang-format off

/* Possible policy decisions */
typedef enum {
    BPFCON_NO_DECISION = 0x00,
    BPFCON_ALLOW       = 0x01,
    BPFCON_DENY        = 0x02,
    BPFCON_TAINT       = 0x04,
} policy_decision_t;
/* Permissions, partly based on AppArmor */
typedef enum {
    BPFCON_MAY_EXEC      = 0x00000001,
    BPFCON_MAY_WRITE     = 0x00000002,
    BPFCON_MAY_READ      = 0x00000004,
    BPFCON_MAY_APPEND    = 0x00000008,
    BPFCON_MAY_CREATE    = 0x00000010,
    BPFCON_MAY_DELETE    = 0x00000020,
    BPFCON_MAY_RENAME    = 0x00000040,
    BPFCON_MAY_SETATTR   = 0x00000080,
    BPFCON_MAY_CHMOD     = 0x00000100,
    BPFCON_MAY_CHOWN     = 0x00000200,
    BPFCON_MAY_LINK      = 0x00000400,
    BPFCON_MAY_EXEC_MMAP = 0x00000800,
    BPFCON_MAY_CHDIR     = 0x00001000,
} file_permission_t;
/* Tunable capabilities
 * Note: Fow now, we only support these capabilities. Most of the other
 * capabilities don't really make sense in the context of a container, but may
 * be required later for compatibility with other container implementations.
 */
typedef enum {
    BPFCON_CAP_NET_BIND_SERVICE = 0x00000001,
    BPFCON_CAP_NET_RAW          = 0x00000002,
    BPFCON_CAP_NET_BROADCAST    = 0x00000004,
    BPFCON_CAP_DAC_OVERRIDE     = 0x00000008,
    BPFCON_CAP_DAC_READ_SEARCH  = 0x00000010,
} capability_t;
/* Network operations */
typedef enum {
    BPFCON_NET_CONNECT  = 0x00000001,
    BPFCON_NET_BIND     = 0x00000002,
    BPFCON_NET_ACCEPT   = 0x00000004,
    BPFCON_NET_LISTEN   = 0x00000008,
    BPFCON_NET_SEND     = 0x00000010,
    BPFCON_NET_RECV     = 0x00000020,
    BPFCON_NET_CREATE   = 0x00000040,
    BPFCON_NET_SHUTDOWN = 0x00000080,
} net_operation_t;
typedef struct {
    policy_decision_t decision;
    u64 policy_id;
    u32 pid;
    u32 tgid;
    u8 comm[16];
} audit_common_t;
typedef struct {
    audit_common_t common;
    file_permission_t access;
    u64 st_ino;
    u32 st_dev;
    // u8 pathname[PATH_MAX];
} audit_file_t;
typedef struct {
    audit_common_t common;
    capability_t cap;
} audit_cap_t;
typedef struct {
    audit_common_t common;
    net_operation_t operation;
} audit_net_t;
typedef struct {
    audit_common_t common;
    u64 other_policy_id;
    u8 sender;  // 1 if we are the sender, 0 otherwise
} audit_ipc_t;
/* ========================================================================= *
 * Process and Container State                                               *
 * ========================================================================= */

// TODO: use this wherever we have a policy id or a container id
typedef u64 policy_id_t;
typedef u64 container_id_t;
typedef struct {
    u8 default_deny;
    u8 default_taint;
} policy_t;
typedef struct {
    container_id_t container_id;
    u32 host_pid;
    u32 host_tgid;
    u32 pid;
    u32 tgid;
} process_t;
// Represents the state of a container
typedef struct {
    // id of bpfcontain policy associated with this container
    policy_id_t policy_id;
    // bpfcontain's version of a container id,
    // also used as a key into the map of containers
    container_id_t container_id;
    // the mount namespace id of this container
    u32 mnt_ns_id;
    // the pid namespace id of this container
    u32 pid_ns_id;
    // reference count of the container (how many tasks are running inside it)
    // this should only be incremented and decremented atomically
    u32 refcount;
    // Is the container in a tainted state?
    u8 tainted;
    // often corresponds with container id on the docker side
    char uts_name[16];
} container_t;