src/bindings/generated/generated.rs

#[test]
fn bindgen_test_layout_audit_common_t() {
    assert_eq!(
        ::std::mem::size_of::<audit_common_t>(),
        40usize,
        concat!("Size of: ", stringify!(audit_common_t))
    );
    assert_eq!(
        ::std::mem::align_of::<audit_common_t>(),
        8usize,
        concat!("Alignment of ", stringify!(audit_common_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<audit_common_t>())).decision as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(audit_common_t),
            "::",
            stringify!(decision)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<audit_common_t>())).policy_id as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(audit_common_t),
            "::",
            stringify!(policy_id)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<audit_common_t>())).pid as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(audit_common_t),
            "::",
            stringify!(pid)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<audit_common_t>())).tgid as *const _ as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(audit_common_t),
            "::",
            stringify!(tgid)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<audit_common_t>())).comm as *const _ as usize },
        24usize,
        concat!(
            "Offset of field: ",
            stringify!(audit_common_t),
            "::",
            stringify!(comm)
        )
    );
}
impl Default for audit_common_t {
    fn default() -> Self {
        unsafe { ::std::mem::zeroed() }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone, PartialEq, Eq)]
pub struct audit_file_t {
    pub common: audit_common_t,
    pub access: file_permission_t::Type,
    pub st_ino: u64_,
    pub st_dev: u32_,
}
#[test]
fn bindgen_test_layout_audit_file_t() {
    assert_eq!(
        ::std::mem::size_of::<audit_file_t>(),
        64usize,
        concat!("Size of: ", stringify!(audit_file_t))
    );
    assert_eq!(
        ::std::mem::align_of::<audit_file_t>(),
        8usize,
        concat!("Alignment of ", stringify!(audit_file_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<audit_file_t>())).common as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(audit_file_t),
            "::",
            stringify!(common)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<audit_file_t>())).access as *const _ as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(audit_file_t),
            "::",
            stringify!(access)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<audit_file_t>())).st_ino as *const _ as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(audit_file_t),
            "::",
            stringify!(st_ino)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<audit_file_t>())).st_dev as *const _ as usize },
        56usize,
        concat!(
            "Offset of field: ",
            stringify!(audit_file_t),
            "::",
            stringify!(st_dev)
        )
    );
}
impl Default for audit_file_t {
    fn default() -> Self {
        unsafe { ::std::mem::zeroed() }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone, PartialEq, Eq)]
pub struct audit_cap_t {
    pub common: audit_common_t,
    pub cap: capability_t::Type,
}
#[test]
fn bindgen_test_layout_audit_cap_t() {
    assert_eq!(
        ::std::mem::size_of::<audit_cap_t>(),
        48usize,
        concat!("Size of: ", stringify!(audit_cap_t))
    );
    assert_eq!(
        ::std::mem::align_of::<audit_cap_t>(),
        8usize,
        concat!("Alignment of ", stringify!(audit_cap_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<audit_cap_t>())).common as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(audit_cap_t),
            "::",
            stringify!(common)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<audit_cap_t>())).cap as *const _ as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(audit_cap_t),
            "::",
            stringify!(cap)
        )
    );
}
impl Default for audit_cap_t {
    fn default() -> Self {
        unsafe { ::std::mem::zeroed() }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone, PartialEq, Eq)]
pub struct audit_net_t {
    pub common: audit_common_t,
    pub operation: net_operation_t::Type,
}
#[test]
fn bindgen_test_layout_audit_net_t() {
    assert_eq!(
        ::std::mem::size_of::<audit_net_t>(),
        48usize,
        concat!("Size of: ", stringify!(audit_net_t))
    );
    assert_eq!(
        ::std::mem::align_of::<audit_net_t>(),
        8usize,
        concat!("Alignment of ", stringify!(audit_net_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<audit_net_t>())).common as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(audit_net_t),
            "::",
            stringify!(common)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<audit_net_t>())).operation as *const _ as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(audit_net_t),
            "::",
            stringify!(operation)
        )
    );
}
impl Default for audit_net_t {
    fn default() -> Self {
        unsafe { ::std::mem::zeroed() }
    }
}
#[repr(C)]
#[derive(Debug, Copy, Clone, PartialEq, Eq)]
pub struct audit_ipc_t {
    pub common: audit_common_t,
    pub other_policy_id: u64_,
    pub sender: u8_,
}
#[test]
fn bindgen_test_layout_audit_ipc_t() {
    assert_eq!(
        ::std::mem::size_of::<audit_ipc_t>(),
        56usize,
        concat!("Size of: ", stringify!(audit_ipc_t))
    );
    assert_eq!(
        ::std::mem::align_of::<audit_ipc_t>(),
        8usize,
        concat!("Alignment of ", stringify!(audit_ipc_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<audit_ipc_t>())).common as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(audit_ipc_t),
            "::",
            stringify!(common)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<audit_ipc_t>())).other_policy_id as *const _ as usize },
        40usize,
        concat!(
            "Offset of field: ",
            stringify!(audit_ipc_t),
            "::",
            stringify!(other_policy_id)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<audit_ipc_t>())).sender as *const _ as usize },
        48usize,
        concat!(
            "Offset of field: ",
            stringify!(audit_ipc_t),
            "::",
            stringify!(sender)
        )
    );
}
impl Default for audit_ipc_t {
    fn default() -> Self {
        unsafe { ::std::mem::zeroed() }
    }
}
pub type policy_id_t = u64_;
pub type container_id_t = u64_;
#[repr(C)]
#[derive(Debug, Default, Copy, Clone, PartialEq, Eq)]
pub struct policy_t {
    pub default_deny: u8_,
    pub default_taint: u8_,
}
#[test]
fn bindgen_test_layout_policy_t() {
    assert_eq!(
        ::std::mem::size_of::<policy_t>(),
        2usize,
        concat!("Size of: ", stringify!(policy_t))
    );
    assert_eq!(
        ::std::mem::align_of::<policy_t>(),
        1usize,
        concat!("Alignment of ", stringify!(policy_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<policy_t>())).default_deny as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(policy_t),
            "::",
            stringify!(default_deny)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<policy_t>())).default_taint as *const _ as usize },
        1usize,
        concat!(
            "Offset of field: ",
            stringify!(policy_t),
            "::",
            stringify!(default_taint)
        )
    );
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone, PartialEq, Eq)]
pub struct process_t {
    pub container_id: container_id_t,
    pub host_pid: u32_,
    pub host_tgid: u32_,
    pub pid: u32_,
    pub tgid: u32_,
}
#[test]
fn bindgen_test_layout_process_t() {
    assert_eq!(
        ::std::mem::size_of::<process_t>(),
        24usize,
        concat!("Size of: ", stringify!(process_t))
    );
    assert_eq!(
        ::std::mem::align_of::<process_t>(),
        8usize,
        concat!("Alignment of ", stringify!(process_t))
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<process_t>())).container_id as *const _ as usize },
        0usize,
        concat!(
            "Offset of field: ",
            stringify!(process_t),
            "::",
            stringify!(container_id)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<process_t>())).host_pid as *const _ as usize },
        8usize,
        concat!(
            "Offset of field: ",
            stringify!(process_t),
            "::",
            stringify!(host_pid)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<process_t>())).host_tgid as *const _ as usize },
        12usize,
        concat!(
            "Offset of field: ",
            stringify!(process_t),
            "::",
            stringify!(host_tgid)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<process_t>())).pid as *const _ as usize },
        16usize,
        concat!(
            "Offset of field: ",
            stringify!(process_t),
            "::",
            stringify!(pid)
        )
    );
    assert_eq!(
        unsafe { &(*(::std::ptr::null::<process_t>())).tgid as *const _ as usize },
        20usize,
        concat!(
            "Offset of field: ",
            stringify!(process_t),
            "::",
            stringify!(tgid)
        )
    );
}
#[repr(C)]
#[derive(Debug, Default, Copy, Clone, PartialEq, Eq)]
pub struct container_t {
    pub policy_id: policy_id_t,
    pub container_id: container_id_t,
    pub mnt_ns_id: u32_,
    pub pid_ns_id: u32_,
    pub refcount: u32_,
    pub tainted: u8_,
    pub uts_name: [::std::os::raw::c_char; 16usize],
}
